--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "graph build",
     "test": "graph test",
     "deploy": "graph codegen && graph build && graph deploy --product hosted-service harvestfi/harvest-finance-base",
-    "create-local": "graph create --node http://localhost:8020/ harvest-graph",
+    "create-local": "graph create --node http://127.0.0.1:8020/ harvest-graph",
     "remove-local": "graph remove --node http://localhost:8020/ harvest-graph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 harvest-graph"
+    "deploy-local": "graph deploy --node http://127.0.0.1:8020/ --ipfs http://127.0.0.1:5001 harvest-graph -l v0.0.1"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.53.0",
