--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "harvest-graph",
+  "name": "harvest-graph-base",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
@@ -11,8 +11,8 @@
     "deploy-local": "graph deploy --node http://127.0.0.1:8020/ --ipfs http://127.0.0.1:5001 harvest-graph -l v0.0.1"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.53.0",
-    "@graphprotocol/graph-ts": "^0.31.0",
+    "@graphprotocol/graph-cli": "0.64.0",
+    "@graphprotocol/graph-ts": "0.32.0",
     "source-map-support": "^0.5.21"
   }
 }
