--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "test": "graph test",
+    "deploy-studio": "graph codegen && graph build && graph deploy --studio -l v0.0.17 l2-base",
     "deploy": "graph codegen && graph build && graph deploy --product hosted-service harvestfi/harvest-finance-base",
     "create-local": "graph create --node http://127.0.0.1:8020/ harvest-graph",
     "remove-local": "graph remove --node http://localhost:8020/ harvest-graph",
