Fix price for aerodrome lp and add notification system

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "test": "graph test",
-    "deploy-studio": "graph codegen && graph build && graph deploy --studio -l v0.0.13 harvest-base"
+    "deploy-studio": "graph codegen && graph build && graph deploy --studio -l v0.0.18 harvest-base && npm run after-deploy",
+    "after-deploy": "./deploy.sh"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.64.0",
