--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "test": "graph test",
-    "deploy-studio": "graph codegen && graph build && graph deploy --studio -l v0.0.21 harvest-base && npm run after-deploy",
+    "deploy-studio": "graph codegen && graph build && graph deploy --studio -l v0.0.22 harvest-base && npm run after-deploy",
+    "deploy-test-stage-studio": "graph codegen && graph build && graph deploy --studio -l v0.1.2 l2-base",
     "after-deploy": "./deploy.sh"
   },
   "dependencies": {
